--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <p>
             "I'm a passionate UI/UX designer eager to thrive in dynamic environments.
              I specialize in crafting intuitive designs that not only prioritize usability 
-             but also exude visual appeal. Proficient in Sketch, Figma, Framer, and Adobe XD, 
+             but also exude visual appeal.
              I stay updated with the latest trends to deliver cutting-edge solutions. With a 
              keen eye for detail and a commitment to excellence, I aim to create memorable user 
              experiences that stand out in the digital landscape."
