--- a/index.html
+++ b/index.html
@@ -412,6 +412,53 @@
           </ol>
 
         </section>
+        <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Professional Experience</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">UI/UX Designer - JGI Groups</h4>
+              <span>Jul 2024 - Present</span>
+
+        <div>
+          <p>
+            Key Responsibilities :  
+          </p>
+        </div>
+              <p class="timeline-text">
+                UI Design: Created high-fidelity UI designs and interactive elements, adhering to the company's
+                brand guidelines and design system
+              </p>
+
+              <p class="timeline-text">
+                Project Management: Managed design timelines and coordinated with teams to ensure timely delivery of design assets.
+              </p>
+
+              <p class="timeline-text">
+               Collaboration: Collaborated with product managers, developers, and QA teams in an agile environment 
+                to deliver high-quality features.
+              </p> 
+
+              <p class="timeline-text">
+               Project Management: Managed design timelines and coordinated with teams to ensure timely delivery of design assets.
+              </p> 
+
+           <div> 
+             <p>  </p>
+           </div>
+            </li>
+    
+          </ol>
+
+        </section>
 
         <section class="timeline">
 
