--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
           <h2 class="h2 article-title">Resume</h2>
         </header>
 
-        <a href="https://drive.google.com/file/d/1KzG9jy2Yhso7JjFIVUhqtR0d1_PJjCJq/view?usp=sharing" class="button">
+        <a href="https://drive.google.com/file/d/159NRueLEs6KG79bYfAx4sujT4FyiF6mk/view?usp=drive_link" class="button">
           <span>View Resume</span> <ion-icon name="download-outline"></ion-icon>
         </a>
         
